updated CSS to handle flex wrap issue on Resume styling

--- a/efolio-app/src/App.css
+++ b/efolio-app/src/App.css
@@ -144,7 +144,11 @@ nav a:hover{
 .main-page{
   min-width: 100%;
   color: var(--dark-gray);
-  /* position: relative; */
+}
+
+
+#about-me p {
+  padding-right: 24px;
 }
 
 /* style the main section where the user will find the styling of sections such as about me, work, and contact me */
@@ -241,6 +245,29 @@ nav a:hover{
   background-color: #dfdfdf10;
 }
 
+/* Resume styling */
+/* ===================================================================================================================================== */
+
+
+.experience {
+  text-decoration: underline;
+  font-size: larger;
+}
+
+.employer p {
+  font-style: italic;
+  font-size: 12px;
+  margin: 0;
+  padding-left: 8px;
+}
+
+.employer ul {
+  font-size: 16px;
+  margin: 0;
+  padding-left: 18px;
+}
+
+
 
 /* Footer styling */
 /* ===================================================================================================================================== */
@@ -314,31 +341,6 @@ footer {
   /* background-color: white; */
 }
 
-/* Media query styling */
-/* ===================================================================================================================================== */
-
-
-.experience {
-  text-decoration: underline;
-  font-size: larger;
-}
-
-.employer p {
-  font-style: italic;
-  font-size: 12px;
-  margin: 0;
-  padding-left: 8px;
-}
-
-.employer ul {
-  font-size: 16px;
-  margin: 0;
-  padding-left: 18px;
-}
-
-.resume-section {
-  display: flex;
-}
 
 
 /* Media query styling */
